fix: covers, positions

--- a/source/sass/partials/_price.scss
+++ b/source/sass/partials/_price.scss
@@ -16,7 +16,7 @@
         }
 
         @media (min-width: 1200px) {
-            padding-bottom: 1500px;
+            padding-bottom: 1640px;
         }
     }
 
@@ -117,7 +117,6 @@
 
         @media (min-width: 1200px) {
             padding-right: 25px;
-            padding-left: 25px;
             padding-top: 20px;
         }
     }
@@ -159,14 +158,14 @@
     box-shadow: 0 5px 12px 6px rgba(244, 169, 192, 0.7);
 }
 
-.basic__link {
+.premium__link {
     @media (min-width: 1200px) {
         display: flex;
         flex-direction: row-reverse;
     }
 }
 
-.basic {
+.premium {
     @media (min-width: 1200px) {
         position: absolute;
         left: 0;
@@ -174,8 +173,8 @@
 
     &__img {
         @media (min-width: 1200px) {
-            min-width: 600px;
-            max-width: 600px;
+            max-width: 475px;
+            margin-right: 25px;
         }
     }
 }
@@ -197,8 +196,7 @@
 
     &__img {
         @media (min-width: 1200px) {
-            min-width: 460px;
-            max-width: 460px;
+            max-width: 410px;
         }
     }
 }
@@ -206,8 +204,8 @@
 .coordination {
     @media (min-width: 1200px) {
         position: absolute;
-        left: 0;
-        top: 625px;
+        left: 80px;
+        top: 1015px;
     }
 
     &__link {
@@ -228,8 +226,8 @@
 .planning {
     @media (min-width: 1200px) {
         position: absolute;
-        right: 0;
-        top: 620px;
+        right: 30px;
+        top: 845px;
     }
 
     @media (min-width: 1440px) {
